Adjust height of timleine down to small tablet

--- a/index.html
+++ b/index.html
@@ -222,8 +222,13 @@ title: Tomas Mulder's Resume
                 <h3>Zenman Productions</h3>
                 <h4>Front-End Developer</h4>
                 <ul>
-                    <li>I developed custom WordPress themes and other miscellaneous front-end deliverables.</li>
-                    <li>I crafted development processes and mentored my development team to achieve a level of quality we could be proud of.</li>
+                    <li>I hand-coded custom WordPress themes.</li>
+                    <li>I crafted development processes and mentored development team to maximize Zenman’s level of quality.</li>
+                    <li>I developed essentials-only theme used as basis for all Zenman’s WordPress websites.</li>
+                    <li>I installed and customized plugins like Advanced Custom Fields, BuddyPress, and WooCommerce.</li>
+                    <li>I filled in for DevOps, creating build scripts, git webhooks, deployment scripts, and bash helper scripts.</li>
+                    <li>I developed various front-end deliverables in systems like Shopify, HubSpot,  and Fishbowl.</li>
+                    <li>I spoke at General Assembly events and taught full-day JavaScript fundamentals workshop for pay.</li>
                 </ul>
             </div>
 
@@ -233,7 +238,10 @@ title: Tomas Mulder's Resume
                 <h4>Graduate Student</h4>
                 <ul>
                     <li>I received a Master of Applied Science degree in Web Design and Development (ICT program).</li>
-                    <li>I developed WordPress-powered websites from templates (yuck) and from scratch as a freelancer.</li>
+                </ul>
+                <h4>Freelance Web Designer—tcmulder.com</h4>
+                <ul>
+                    <li>I developed WordPress-powered websites from templates (yuck) and from scratch</li>
                 </ul>
             </div>
 
@@ -244,6 +252,8 @@ title: Tomas Mulder's Resume
                 <ul>
                     <li>I volunteered to handle most of the computer technology and communication needs for an entire platoon as their chief dispatcher.</li>
                     <li>I instructed hundreds of Marines through Indoor Simulated Marksmanship Trainer computer technologies.</li>
+                    <li>0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000</li>
+                    <li>0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000</li>
                 </ul>
             </div>
 
@@ -259,34 +269,32 @@ title: Tomas Mulder's Resume
                 <h4>Teachers Aide—PTC Department</h4>
                 <ul>
                     <li>I assisted students as a teacher’s aide in four web design courses, most of which I was taking for the first time concurrently.</li>
-                    <li>I developed various demonstration pieces for professors to present to their classes, including my first CSS-based layout.</li>
                 </ul>
                 <!-- 2002-2006 -->
                 <h4>Freelance Visual Designer—t-Creative</h4>
                 <ul>
                     <li>I was paid to create a brochure, media CD, and two websites for the PTC Department at Montana Tech.</li>
-                    <li>I designed several small (<em>small</em>) websites for clients, a few of which included PayPal ecommerce functionality.</li>
                 </ul>
             </div>
 
-            <ul class="exp__timeline">
-                <!-- in emmet... .exp__year{20$$@-}*16 -->
-                <li class="exp__year"><span>today</span></li>
-                <li class="exp__year"><span>2016</span></li>
-                <li class="exp__year"><span>2015</span></li>
-                <li class="exp__year"><span>2014</span></li>
-                <li class="exp__year"><span>2013</span></li>
-                <li class="exp__year"><span>2012</span></li>
-                <li class="exp__year"><span>2011</span></li>
-                <li class="exp__year"><span>2010</span></li>
-                <li class="exp__year"><span>2009</span></li>
-                <li class="exp__year"><span>2008</span></li>
-                <li class="exp__year"><span>2007</span></li>
-                <li class="exp__year"><span>2006</span></li>
-                <li class="exp__year"><span>2005</span></li>
-                <li class="exp__year"><span>2004</span></li>
-                <li class="exp__year"><span>2003</span></li>
-                <li class="exp__year"><span>2002</span></li>
+            <ul class="timeline__year-list">
+                <!-- in emmet... .timeline__year{20$$@-}*16 -->
+                <li class="timeline__year"><span>today</span></li>
+                <li class="timeline__year"><span>2016</span></li>
+                <li class="timeline__year"><span>2015</span></li>
+                <li class="timeline__year"><span>2014</span></li>
+                <li class="timeline__year"><span>2013</span></li>
+                <li class="timeline__year"><span>2012</span></li>
+                <li class="timeline__year"><span>2011</span></li>
+                <li class="timeline__year"><span>2010</span></li>
+                <li class="timeline__year"><span>2009</span></li>
+                <li class="timeline__year"><span>2008</span></li>
+                <li class="timeline__year"><span>2007</span></li>
+                <li class="timeline__year"><span>2006</span></li>
+                <li class="timeline__year"><span>2005</span></li>
+                <li class="timeline__year"><span>2004</span></li>
+                <li class="timeline__year"><span>2003</span></li>
+                <li class="timeline__year"><span>2002</span></li>
             </ul>
 
         </div> <!-- .exp -->
