Add new link icons with credits

--- a/index.html
+++ b/index.html
@@ -26,25 +26,25 @@ title: Tomas Mulder's Resume
                     <input type="radio" name="icon-slider-nav" id="slide-1" checked />
                     <label for="slide-1" class="icon-slider__link">
                         <svg viewbox="0 0 1000 1000">
-                            <use xlink:href="images/general.sprite.svg#codepen"></use>
+                            <use xlink:href="images/general.sprite.svg#brain"></use>
                         </svg>
                     </label>
                     <input type="radio" name="icon-slider-nav" id="slide-2" />
                     <label for="slide-2" class="icon-slider__link">
                         <svg viewbox="0 0 1000 1000">
-                            <use xlink:href="images/general.sprite.svg#codepen"></use>
+                            <use xlink:href="images/general.sprite.svg#code"></use>
                         </svg>
                     </label>
                     <input type="radio" name="icon-slider-nav" id="slide-3" />
                     <label for="slide-3" class="icon-slider__link">
                         <svg viewbox="0 0 1000 1000">
-                            <use xlink:href="images/general.sprite.svg#codepen"></use>
+                            <use xlink:href="images/general.sprite.svg#tools"></use>
                         </svg>
                     </label>
                     <input type="radio" name="icon-slider-nav" id="slide-4" />
                     <label for="slide-4" class="icon-slider__link">
                         <svg viewbox="0 0 1000 1000">
-                            <use xlink:href="images/general.sprite.svg#codepen"></use>
+                            <use xlink:href="images/general.sprite.svg#me"></use>
                         </svg>
                     </label>
                     <div class="icon-slider__small-frame">
