Add usmc content and apply random style tweeks (mostly icons)

--- a/index.html
+++ b/index.html
@@ -177,28 +177,36 @@ title: Tomas Mulder's Resume
                         <h2>Contact</h2>
                     </div>
                     <a href="mailto:rockymountainlake@gmail.com" target="_blank" class="contact-links__group">
+                        <span class="contact-links__icon">
+                            <svg viewbox="0 0 1000 1000">
+                                <use xlink:href="images/general.sprite.svg#mail"></use>
+                            </svg>
+                        </span>
                         <h3>Email</h3>
-                        <svg viewbox="0 0 1000 1000" class="contact-links__icon">
-                            <use xlink:href="images/general.sprite.svg#mail"></use>
-                        </svg>
                     </a>
                     <a href="https://github.com/tcmulder" target="_blank" class="contact-links__group">
+                        <span class="contact-links__icon">
+                            <svg viewbox="0 0 1000 1000">
+                                <use xlink:href="images/general.sprite.svg#github"></use>
+                            </svg>
+                        </span>
                         <h3>GitHub</h3>
-                        <svg viewbox="0 0 1000 1000" class="contact-links__icon">
-                            <use xlink:href="images/general.sprite.svg#github"></use>
-                        </svg>
                     </a>
                     <a href="http://codepen.io/tcmulder/" target="_blank" class="contact-links__group">
+                        <span class="contact-links__icon">
+                            <svg viewbox="0 0 1000 1000">
+                                <use xlink:href="images/general.sprite.svg#codepen"></use>
+                            </svg>
+                        </span>
                         <h3>CodePen</h3>
-                        <svg viewbox="0 0 1000 1000" class="contact-links__icon">
-                            <use xlink:href="images/general.sprite.svg#codepen"></use>
-                        </svg>
                     </a>
                     <a href="https://twitter.com/tcmulder" target="_blank" class="contact-links__group">
+                        <span class="contact-links__icon">
+                            <svg viewbox="0 0 1000 1000">
+                                <use xlink:href="images/general.sprite.svg#twitter"></use>
+                            </svg>
+                        </span>
                         <h3>Twitter</h3>
-                        <svg viewbox="0 0 1000 1000" class="contact-links__icon">
-                            <use xlink:href="images/general.sprite.svg#twitter"></use>
-                        </svg>
                     </a>
                 </div>
 
@@ -252,8 +260,8 @@ title: Tomas Mulder's Resume
                 <ul>
                     <li>I volunteered to handle most of the computer technology and communication needs for an entire platoon as their chief dispatcher.</li>
                     <li>I instructed hundreds of Marines through Indoor Simulated Marksmanship Trainer computer technologies.</li>
-                    <li>0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000</li>
-                    <li>0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000</li>
+                    <li>My poor Macbook Pro survived two deployments to the sands of Iraq so I could keep up on my tech skills during infrequent downtime back at base.</li>
+                    <li>I was placed in a Light Armored Reconnaissance amphibious battalion for being a dogged swimmer (not certain how this fact translates into web development, beyond demonstrating persistence).</li>
                 </ul>
             </div>
 
@@ -312,28 +320,36 @@ title: Tomas Mulder's Resume
             </div>
 
             <div class="achieve__group achieve__group--zen-principle">
-                <p>2016 Promoted to Principle Developer, in charge of all development-related company activities.</p>
+                <!-- 2016 -->
+                <p>Promoted to Principle Developer, in charge of all development-related company activities.</p>
             </div>
             <div class="achieve__group achieve__group--zen-lead">
-                <p>2015 Promoted to Lead Developer for demonstrating my leadership and mentoring capacity.</p>
+                <!-- 2015 -->
+                <p>Promoted to Lead Developer for demonstrating my leadership and mentoring capacity.</p>
             </div>
             <div class="achieve__group achieve__group--zen-senior">
-                <p>2014 Promoted to Senior Developer at Zenman for exhibiting advanced development skills.</p>
+                <!-- 2014 -->
+                <p>Promoted to Senior Developer at Zenman for exhibiting advanced development skills.</p>
             </div>
             <div class="achieve__group achieve__group--du-4">
-                <p>2012 Earned a 4.0 GPA.</p>
+                <!-- 2012 -->
+                <p>Earned a 4.0 GPA.</p>
             </div>
             <div class="achieve__group achieve__group--usmc-good-cookie">
-                <p>2009 Earned Marine Corps Good Conduct Medal for three years of honorable and faithful service.</p>
+                <!-- 2009 -->
+                <p>Earned Marine Corps Good Conduct Medal for three years of honorable and faithful service.</p>
             </div>
             <div class="achieve__group achieve__group--usmc-commendation">
-                <p>2007 Earned Marine Corps Certificate of Commendation for outstanding achievement in duties.</p>
+                <!-- 2007 -->
+                <p>Earned Marine Corps Certificate of Commendation for outstanding achievement in duties.</p>
             </div>
             <div class="achieve__group achieve__group--tech-4">
-                <p>2006 Earned a 4.0 GPA.</p>
+                <!-- 2006 -->
+                <p>Earned a 4.0 GPA.</p>
             </div>
             <div class="achieve__group achieve__group--tech-achievement">
-                <p>2006 Earned the Outstanding Achievement award in the Professional and Technical Communication Program.</p>
+                <!-- 2006 -->
+                <p>Earned the Outstanding Achievement award in the Professional and Technical Communication Program.</p>
             </div>
 
         </div> <!-- .achieve -->
