--- a/index.html
+++ b/index.html
@@ -52,116 +52,116 @@ title: Tomas Mulder's Resume
                             <div class="icon-slider__slide icon-slider__slide--1">
                                 <h3>Capabilities</h3>
                                 <ul class="icon-slider__chart">
-                                    <li class="icon-slider__stat"  data-per="10">
-                                        <span>Website Development</span>
+                                    <li class="icon-slider__stat" data-per="100">
+                                        <span>Front-End Development</span>
                                     </li>
-                                    <li class="icon-slider__stat"  data-per="20">
-                                        <span>WordPress Theming</span>
-                                    </li>
-                                    <li class="icon-slider__stat"  data-per="0">
-                                        <span>Website Design</span>
-                                    </li>
-                                    <li class="icon-slider__stat"  data-per="20">
-                                        <span>Process Formation</span>
-                                    </li>
-                                    <li class="icon-slider__stat"  data-per="50">
+                                    <li class="icon-slider__stat" data-per="90">
                                         <span>Leadership and Mentoring</span>
                                     </li>
-                                    <li class="icon-slider__stat"  data-per="90">
+                                    <li class="icon-slider__stat" data-per="80">
+                                        <span>WordPress Theming</span>
+                                    </li>
+                                    <li class="icon-slider__stat" data-per="60">
+                                        <span>Agile Methodology</span>
+                                    </li>
+                                    <li class="icon-slider__stat" data-per="70">
                                         <span>Information Architecture</span>
                                     </li>
-                                    <li class="icon-slider__stat"  data-per="70">
-                                        <span>Graphics Design</span>
+                                    <li class="icon-slider__stat" data-per="60">
+                                        <span>Back-End Development</span>
                                     </li>
-                                    <li class="icon-slider__stat"  data-per="100">
+                                    <li class="icon-slider__stat" data-per="50">
                                         <span>Usability Testing</span>
+                                    </li>
+                                    <li class="icon-slider__stat" data-per="40">
+                                        <span>Website Design</span>
                                     </li>
                                 </ul>
                             </div>
                             <div class="icon-slider__slide icon-slider__slide--2">
                                 <h3>Technologies</h3>
                                 <ul class="icon-slider__chart">
-                                    <li class="icon-slider__stat"  data-per="10">
-                                        <span>HTML5 Markup</span>
+                                    <li class="icon-slider__stat" data-per="100">
+                                        <span>Semantic HTML</span>
                                     </li>
-                                    <li class="icon-slider__stat"  data-per="20">
-                                        <span>CSS3 Styling</span>
+                                    <li class="icon-slider__stat" data-per="100">
+                                        <span>CSS and SCSS</span>
                                     </li>
-                                    <li class="icon-slider__stat"  data-per="0">
-                                        <span>SCSS Preprocessing</span>
+                                    <li class="icon-slider__stat" data-per="90">
+                                        <span>JavaScript, jQuery, and Ajax</span>
                                     </li>
-                                    <li class="icon-slider__stat"  data-per="20">
-                                        <span>JavaScript/jQuery/Ajax</span>
-                                    </li>
-                                    <li class="icon-slider__stat"  data-per="50">
+                                    <li class="icon-slider__stat" data-per="80">
                                         <span>WordPress Codex</span>
                                     </li>
-                                    <li class="icon-slider__stat"  data-per="90">
+                                    <li class="icon-slider__stat" data-per="60">
+                                        <span>Git Version Control</span>
+                                    </li>
+                                    <li class="icon-slider__stat" data-per="60">
                                         <span>PHP/MySQL Back-End</span>
                                     </li>
-                                    <li class="icon-slider__stat"  data-per="70">
+                                    <li class="icon-slider__stat" data-per="70">
                                         <span>Gulp/Grunt Build Tools</span>
                                     </li>
-                                    <li class="icon-slider__stat"  data-per="100">
-                                        <span>Git Version Control</span>
+                                    <li class="icon-slider__stat" data-per="40">
+                                        <span>Bash Unix Shell</span>
                                     </li>
                                 </ul>
                             </div>
                             <div class="icon-slider__slide icon-slider__slide--3">
                                 <h3>Software</h3>
                                 <ul class="icon-slider__chart">
-                                    <li class="icon-slider__stat"  data-per="10">
+                                    <li class="icon-slider__stat" data-per="100">
                                         <span>Sublime Text</span>
                                     </li>
-                                    <li class="icon-slider__stat"  data-per="20">
-                                        <span>iTerm</span>
+                                    <li class="icon-slider__stat" data-per="70">
+                                        <span>Chrome DevTools</span>
                                     </li>
-                                    <li class="icon-slider__stat"  data-per="0">
-                                        <span>MAMP</span>
+                                    <li class="icon-slider__stat" data-per="50">
+                                        <span>iTerm2 Console</span>
                                     </li>
-                                    <li class="icon-slider__stat"  data-per="20">
+                                    <li class="icon-slider__stat" data-per="70">
+                                        <span>GitHub and GitLab</span>
+                                    </li>
+                                    <li class="icon-slider__stat" data-per="70">
+                                        <span>MAMP Pro</span>
+                                    </li>
+                                    <li class="icon-slider__stat" data-per="50">
                                         <span>VirtualBox/Vagrant</span>
                                     </li>
-                                    <li class="icon-slider__stat"  data-per="50">
+                                    <li class="icon-slider__stat" data-per="40">
                                         <span>Photoshop</span>
                                     </li>
-                                    <li class="icon-slider__stat"  data-per="90">
-                                        <span>Illustrator</span>
-                                    </li>
-                                    <li class="icon-slider__stat"  data-per="70">
-                                        <span>Atom</span>
-                                    </li>
-                                    <li class="icon-slider__stat"  data-per="100">
-                                        <span>Chrome DevTools</span>
+                                    <li class="icon-slider__stat" data-per="30">
+                                        <span>Illustrator and Sketch</span>
                                     </li>
                                 </ul>
                             </div>
                             <div class="icon-slider__slide icon-slider__slide--4">
                                 <h3>Character</h3>
                                 <ul class="icon-slider__chart">
-                                    <li class="icon-slider__stat"  data-per="10">
+                                    <li class="icon-slider__stat" data-per="100">
                                         <span>Hard Worker</span>
                                     </li>
-                                    <li class="icon-slider__stat"  data-per="20">
+                                    <li class="icon-slider__stat" data-per="90">
                                         <span>Well Organized</span>
                                     </li>
-                                    <li class="icon-slider__stat"  data-per="0">
+                                    <li class="icon-slider__stat" data-per="80">
                                         <span>Great Communicator</span>
                                     </li>
-                                    <li class="icon-slider__stat"  data-per="20">
+                                    <li class="icon-slider__stat" data-per="80">
                                         <span>Effective Leader</span>
                                     </li>
-                                    <li class="icon-slider__stat"  data-per="50">
+                                    <li class="icon-slider__stat" data-per="80">
                                         <span>Team Player</span>
                                     </li>
-                                    <li class="icon-slider__stat"  data-per="90">
+                                    <li class="icon-slider__stat" data-per="100">
                                         <span>Strong Ethics</span>
                                     </li>
-                                    <li class="icon-slider__stat"  data-per="70">
+                                    <li class="icon-slider__stat" data-per="90">
                                         <span>Quick Learner</span>
                                     </li>
-                                    <li class="icon-slider__stat"  data-per="100">
-                                        <span>Always Improving</span>
+                                    <li class="icon-slider__stat" data-per="80">
+                                        <span>Constantly Improving</span>
                                     </li>
                                 </ul>
                             </div>
