Add basic col pages and credits/thank you content

--- a/credits.html
+++ b/credits.html
@@ -1,5 +1,32 @@
 ---
 title: Credits
 ---
-
-<h1>Credits</h1>
+<div class="basic-col">
+    <div class="basic-col__inner">
+        <div class="basic-col__dark">
+            <a href="/" class="basic-col__back-home">Back Home<span></span></a>
+            <h1>Credits</h1>
+            <h2>Stock Icons</h2>
+            <p>While I can create my own icons, why reinvent the wheel? These icons are from the awesome <a href="https://thenounproject.com/" target="_blank">Noun Project</a></p>
+            <!-- credit format from https://thenounproject.zendesk.com/hc/en-us/articles/200509928-How-do-I-give-creators-credit-in-my-work- -->
+            <ul>
+                <li>
+                    <a href="https://thenounproject.com/term/tools/175870/" target="_blank">"Tools"</a>
+                    by Creative Stall, from the Noun Project
+                </li>
+                <li>
+                    <a href="https://thenounproject.com/term/user/26016/" target="_blank">"User"</a>
+                    by Lil Squid, from the Noun Project
+                </li>
+                <li>
+                    <a href="https://thenounproject.com/term/code/115209/" target="_blank">"Code"</a>
+                    by Zlatko Najdenovski, from the Noun Project
+                </li>
+                <li>
+                    <a href="https://thenounproject.com/term/brain/685/" target="_blank">"Brain"</a>
+                    in the Public Domain, from the Noun Project
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
