--- a/thank-you.html
+++ b/thank-you.html
@@ -1,6 +1,12 @@
 ---
 title: Credits
 ---
-<a href="/" class="back-home">Back Home</a>
-<h1>Thanks!</h1>
-<p>Your message has been sent</p>
+<div class="basic-col">
+    <div class="basic-col__inner">
+        <div class="basic-col__dark">
+            <a href="/" class="basic-col__back-home">Back Home<span></span></a>
+            <h1>Thanks!</h1>
+            <p>Your message has been sent</p>
+        </div>
+    </div>
+</div>
