--- a/index.html
+++ b/index.html
@@ -230,13 +230,13 @@ title: Tomas Mulder's Resume
                 <h3>Zenman Productions</h3>
                 <h4>Front-End Developer</h4>
                 <ul>
-                    <li>I hand-coded custom WordPress themes.</li>
-                    <li>I crafted development processes and mentored development team to maximize Zenman’s level of quality.</li>
-                    <li>I developed essentials-only theme used as basis for all Zenman’s WordPress websites.</li>
+                    <li>The majority of my technical work involved hand-coding custom WordPress themes.</li>
+                    <li>I crafted development processes and mentored my development team to maximize Zenman's level of quality.</li>
+                    <li>I developed an essentials-only theme used as the basis for all Zenman's WordPress websites.</li>
                     <li>I installed and customized plugins like Advanced Custom Fields, BuddyPress, and WooCommerce.</li>
-                    <li>I filled in for DevOps, creating build scripts, git webhooks, deployment scripts, and bash helper scripts.</li>
+                    <li>We had no DevOps, so I filled in, creating build scripts, git webhooks, deployment scripts, and bash helper scripts.</li>
                     <li>I developed various front-end deliverables in systems like Shopify, HubSpot,  and Fishbowl.</li>
-                    <li>I spoke at General Assembly events and taught full-day JavaScript fundamentals workshop for pay.</li>
+                    <li>I spoke at <a href="https://generalassemb.ly/" target="_blank">General Assembly</a> events and taught a paid, full-day JavaScript fundamentals workshop.</li>
                 </ul>
             </div>
 
@@ -246,10 +246,11 @@ title: Tomas Mulder's Resume
                 <h4>Graduate Student</h4>
                 <ul>
                     <li>I received a Master of Applied Science degree in Web Design and Development (ICT program).</li>
+                    <li>I focused on learning development process and more JavaScript.</li>
                 </ul>
                 <h4>Freelance Web Designer—tcmulder.com</h4>
                 <ul>
-                    <li>I developed WordPress-powered websites from templates (yuck) and from scratch</li>
+                    <li>I developed WordPress websites from templates (yuck!) and from scratch.</li>
                 </ul>
             </div>
 
@@ -258,10 +259,10 @@ title: Tomas Mulder's Resume
                 <h3>1st LAR United States Marine Corps</h3>
                 <h4>Infantry Scout</h4>
                 <ul>
-                    <li>I volunteered to handle most of the computer technology and communication needs for an entire platoon as their chief dispatcher.</li>
+                    <li>I volunteered to handle most of the computer technology communication needs for an entire platoon as their Chief Dispatcher.</li>
                     <li>I instructed hundreds of Marines through Indoor Simulated Marksmanship Trainer computer technologies.</li>
-                    <li>My poor Macbook Pro survived two deployments to the sands of Iraq so I could keep up on my tech skills during infrequent downtime back at base.</li>
-                    <li>I was placed in a Light Armored Reconnaissance amphibious battalion for being a dogged swimmer (not certain how this fact translates into web development, beyond demonstrating persistence).</li>
+                    <li>My poor Macbook Pro survived two deployments to the sands of Iraq so I could keep up on my tech skills during infrequent downtime back at the base.</li>
+                    <li>I was placed in a Light Armored Reconnaissance amphibious battalion for being a dogged swimmer (not certain how this fact translates into web development&mdash;persistence?).</li>
                 </ul>
             </div>
 
@@ -271,12 +272,12 @@ title: Tomas Mulder's Resume
                 <h4>Undergraduate Student</h4>
                 <ul>
                     <li>I received a Bachelor of Science degree in Professional and Technical Communication (PTC program).</li>
-                    <li>Mostly I focused on HTML, CSS, jQuery, and ActionScript languages and Adobe design software.</li>
+                    <li>Mostly I focused on HTML, CSS, jQuery, and ActionScript languages, along with Adobe design software.</li>
                 </ul>
                 <!-- 2004-2006 -->
                 <h4>Teachers Aide—PTC Department</h4>
                 <ul>
-                    <li>I assisted students as a teacher’s aide in four web design courses, most of which I was taking for the first time concurrently.</li>
+                    <li>I assisted students as a teacher's aide in four web design courses, most of which I was taking for the first time myself.</li>
                 </ul>
                 <!-- 2002-2006 -->
                 <h4>Freelance Visual Designer—t-Creative</h4>
@@ -321,11 +322,11 @@ title: Tomas Mulder's Resume
 
             <div class="achieve__group achieve__group--zen-principle">
                 <!-- 2016 -->
-                <p>Promoted to Principle Developer, in charge of all development-related company activities.</p>
+                <p>Promoted to Principle Developer at Zenman, in charge of all development-related company activities.</p>
             </div>
             <div class="achieve__group achieve__group--zen-lead">
                 <!-- 2015 -->
-                <p>Promoted to Lead Developer for demonstrating my leadership and mentoring capacity.</p>
+                <p>Promoted to Lead Developer at Zenman for demonstrating my leadership and mentoring capacity.</p>
             </div>
             <div class="achieve__group achieve__group--zen-senior">
                 <!-- 2014 -->
